<resources>
    <string name="app_name">Guardear</string>
    <string name="add_textbox_hint">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="service_title">SafeYourEar</string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Item Text</string>
    <string name="age">나이</string>
    <string name="sex">성별</string>
    <string name="sex_female">여자</string>
    <string name="sex_male">남자</string>
    <string name="select">선택</string>
    <string name="select_age">나이를 선택하세요</string>
    <string name="btn_register">이메일로 가입하기</string>
    <string name="btn_login">로그인</string>
    <string name="email">E-mail</string>
    <string name="findEmail">E-mail을 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="password2">비밀번호 확인</string>
    <string name="btn_cancel">취소</string>
    <string name="btn_check">확인</string>
    <string name="name">닉네임</string>
    <string name="btn_findPW">비밀번호를 잊어버리셨나요?</string>
    <string name="common_signin_button_text_long">Google</string>
    <string name="loading">loading</string>
    <string name="btn_send">이메일 전송</string>
    <string name="btn_change">인증번호 확인</string>
    <string name="etNumber">인증번호 입력</string>
    <string name="text_alert1">인증번호가 메일로 전송되었습니다</string>
    <string name="text_alert2">입력하신 메일에서 인증번호를 확인해주세요</string>
    <string name="diolog_mail">이메일이 올바르지 않습니다</string>
    <string name="diolog_wrongPW">비밀번호가 일치하지 않습니다</string>
    <string name="newPassword">새로운 비밀번호 입력</string>
    <string name="onceMore">한번 더 입력하세요</string>
    <string name="btn_PWchange">비밀번호 변경</string>
    <string name="diolog_once1">새로운 인증번호를 전송했습니다</string>
    <string name="diolog_once2">새로운 인증번호를 입력해주세요</string>
    <string name="diolog_changePW">새로운 비밀번호로 다시 로그인 해주세요</string>
    <string name="changePW">새로운 비밀번호를 입력해주세요</string>
    <string name="facebook_app_id">1893957274168778</string>
    <string name="login_with_facebook">facebook</string>
    <string name="searchEar">이어폰 명을 검색하세요</string>
    <string name="btn_Search">검색</string>
    <string name="btn_Next">다음</string>



    <string-array name = "Age">
        <item>@string/select</item>
        <item>16세</item>
        <item>17세</item>
        <item>18세</item>
        <item>19세</item>
        <item>20세</item>
        <item>21세</item>
        <item>22세</item>
        <item>23세</item>
        <item>24세</item>
        <item>25세</item>
        <item>26세</item>
        <item>27세</item>
        <item>28세</item>
        <item>29세</item>
        <item>30세</item>
        <item>31세</item>
        <item>32세</item>
        <item>33세</item>
        <item>34세</item>
        <item>35세</item>
        <item>36세</item>
        <item>37세</item>
        <item>38세</item>
        <item>39세</item>
        <item>40세</item>
        <item>41세</item>
        <item>42세</item>
        <item>43세</item>
        <item>44세</item>
    </string-array>

</resources>
