<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.imaginecup.ensharp.guardear.FindpwActivity"
    android:id="@+id/activity_earphone"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/navy"
    android:orientation ="vertical"
    android:gravity="center"
    android:weightSum="3"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/findEmail"
            android:textColor="@color/white"
            android:text="@string/findEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_centerHorizontal="true"/>


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="12"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/roundline"
            android:textColor="#050505"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:weightSum="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/text_alert1"
            android:text="@string/text_alert1"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/text_alert2"
            android:text="@string/text_alert2"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>


        <EditText
            android:id="@+id/etNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundline"
            android:layout_gravity="center_horizontal"
            android:inputType="numberPassword"
            android:textColor="#050505"
            android:visibility="gone"
            android:ems="12"
            />
    </LinearLayout>



    <Button
        android:id="@+id/btn_send"
        android:text="@string/btn_send"
        android:background ="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />



</LinearLayout>
