<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pw"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/navy"
    tools:context="com.imaginecup.ensharp.guardear.ChangePWActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3">


    <TextView
        android:text="@string/changePW"
        android:textColor="@color/white"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:layout_marginBottom="10dp"
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/locked"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:id="@+id/imageView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:id="@+id/etPassword"
            android:hint="@string/newPassword"
            android:background="@drawable/roundline"
            android:textColor="#050505"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:id="@+id/layout2"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/locked"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/onceMore"
            android:background="@drawable/roundline"
            android:textColor="#050505" />

        </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:text="@string/btn_PWchange"
        android:textColor="@color/skyblue"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginTop="97dp"
        android:background = "@drawable/shape"/>
</LinearLayout>
